fixtures/success/generateGuestToken.js
module.exports = {
    guest_token: 'gAAAAABfKsd9z3Ly',
    date: new Date().toISOString(),
    message: 'Token Created'
  };
  