fixtures/error/renewGuestToken_invalidToken.js
module.exports = {
    statusCode: 401,
    detail: 'Invalid guest token'
  };
  